# learning

./: .gitignore  README.md
opengl/: CMakeLists.txt  generate_shaders.py
opengl/debug/: CMakeCache.txt  Makefile  cmake_install.cmake  opengl
opengl/include/: shaders.h
opengl/include/util/: FileLoader.h
opengl/src/: main.cpp  main_1.cpp  main_2.cpp
opengl/src/shaders/: Fragment.fsh  Vertex.vsh  vshader.vsh
opengl/src/util/: FileLoader.cpp
